--- a/DoctorsOffice/Views/Doctors/Details.cshtml
+++ b/DoctorsOffice/Views/Doctors/Details.cshtml
@@ -7,20 +7,34 @@
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 
-@if(@Model.JoinEntities.Count == 0)
+@if (@Model.JoinEntities.Count == 0)
 {
   <p>This doctor does not belong to any specialties</p>
 }
+
 else
 {
   <h4>Specialties this doctor belongs to:</h4>
   <ul>
-  @foreach(var join in Model.JoinEntities)
-  {
-    <li>@join.Specialty.Name</li>
-  }
+  @foreach (var join in Model.JoinEntities)
+    {
+      <li>
+        <ul >
+          <li class="inline-li">
+            @join.Specialty.Name</li>
+          <li class="inline-li">
+            @using (Html.BeginForm("DeleteSpecialty", "Doctors"))
+            {
+              @Html.Hidden("joinId", @join.DoctorSpecialtyId)
+              <input type="submit" value="DeleteSpecialty" />
+            }
+          </li>
+        </ul>
+      </li>
+    }
   </ul>
 }
+
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
 <p>@Html.ActionLink("Edit Doctor", "Edit", new { id = Model.DoctorId })</p>
