--- a/DoctorsOffice/Views/Specialties/Details.cshtml
+++ b/DoctorsOffice/Views/Specialties/Details.cshtml
@@ -1,27 +1,27 @@
 @{
   Layout = "_Layout";
 }
-@model DocOffice.Models.Doctor
+@model DocOffice.Models.Specialty
 
-<h2>Doctor Details</h2>
+<h2>Specialty Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 
 @if(@Model.JoinEntities.Count == 0)
 {
-  <p>This doctor does not belong to any specialties</p>
+  <p>This Specialty does not have any doctors assigned to it.</p>
 }
 else
 {
-  <h4>Specialties this doctor belongs to:</h4>
+  <h4>Doctors assigned to this specialty:</h4>
   <ul>
   @foreach(var join in Model.JoinEntities)
   {
-    <li>@join.Specialty.Name</li>
+    <li>@join.Doctor.Name</li>
   }
   </ul>
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Edit Doctor", "Edit", new { id = Model.DoctorId })</p>
-<p>@Html.ActionLink("Delete Doctor", "Delete", new { id = Model.DoctorId })</p>
+<p>@Html.ActionLink("Edit Specialty", "Edit", new { id = Model.SpecialtyId })</p>
+<p>@Html.ActionLink("Delete Specialty", "Delete", new { id = Model.SpecialtyId })</p>
